z-index fix?

--- a/css/style.css
+++ b/css/style.css
@@ -1651,18 +1651,17 @@ body.is-touch-device .top__info .right>p  , body.is-touch-device .top__info .rig
 	display: inline-flex;
 	border:0px;
 	padding:0px;
-	min-width: 24px;
-	max-width: 24px;
-	min-height: 24px;
-	max-height: 24px;
+	min-width: 34px;
+	max-width: 34px;
+	min-height: 34px;
+	max-height: 34px;
 	align-items: center;
 	position: absolute;
-	right:8px;
+	right:2px;
 	top:50%;
 	transform:translateY(-50%);
 	justify-content: center;
 	cursor:pointer;
-	pointer-events: none;
 	background-color: transparent;
 }
 .mobile-info form>input{
@@ -1747,7 +1746,7 @@ body.is-touch-device .top__info .right>p  , body.is-touch-device .top__info .rig
 	pointer-events: initial;
 }
 .mobile-info form button{
-	z-index: 3;
+	z-index: 10;
 	pointer-events: initial;
 }
 .mobile-info>p , .mobile-info>form{
@@ -1765,9 +1764,7 @@ body.is-touch-device .top__info .right>p  , body.is-touch-device .top__info .rig
 	font-weight: 500;
 	opacity:.5;
 }
-.mobile-info>span{
 
-}
 .mobile-info>span{
 	position: absolute;
 	left:50%;
